--- a/style.css
+++ b/style.css
@@ -188,10 +188,9 @@ img{
   }
   img{
     margin: 5%;
-    margin-left: 25%;
     margin-bottom: 0px;
-    width: 500px;
-    height: 300px;
+    width: 300;
+    height: 180px;
   }
 }
 @media screen and (max-width: 375px){
